--- a/sample.env
+++ b/sample.env
@@ -5,3 +5,7 @@ export AZURE_SQL_DATABASE="yourdb"
 export AZURE_SQL_USER="user@contoso.com"
 export AZURE_SQL_PASSWORD="P@ssw0rd!"
 export EVENT_NAME="FromCodespaces"
+
+# Enable JDBC driver tracing (optional)
+# Set to "true" to enable detailed driver operation logging
+# export JDBC_TRACE="true"
