Add dynamic JDBC trace level configuration via environment variable
- Add JDBC_TRACE_LEVEL environment variable (INFO, DEBUG, TRACE, WARN)
- Use reflection to configure Logback logger at runtime (avoids compile-time dependency issues)
- Update documentation in README.md, TRACING.md, and sample.env
- Fix maven-jar-plugin configuration

Users can now set trace level dynamically:
export JDBC_TRACE="true"
export JDBC_TRACE_LEVEL="DEBUG"
./scripts/run.sh

--- a/sample.env
+++ b/sample.env
@@ -9,3 +9,7 @@ export EVENT_NAME="FromCodespaces"
 # Enable JDBC driver tracing (optional)
 # Set to "true" to enable detailed driver operation logging
 # export JDBC_TRACE="true"
+
+# Set JDBC trace level (optional, requires JDBC_TRACE="true")
+# Valid values: INFO, DEBUG, TRACE
+# export JDBC_TRACE_LEVEL="DEBUG"
