--- a/sample.env
+++ b/sample.env
@@ -11,5 +11,5 @@ export EVENT_NAME="FromCodespaces"
 # export JDBC_TRACE="true"
 
 # Set JDBC trace level (optional, requires JDBC_TRACE="true")
-# Valid values: INFO, DEBUG, TRACE
-# export JDBC_TRACE_LEVEL="DEBUG"
+# Valid values: FINEST, FINER, FINE, INFO, WARNING, SEVERE, OFF, ALL
+# export JDBC_TRACE_LEVEL="FINE"
